# w2v-bert-uk

./: .dockerignore  .gitignore  Cargo.toml  README.md  TODO.md  TRAIN_RUST.md  build.rs  go.mod  news-titles.arpa  package-lock.json  package.json  pyproject.toml  uniffi.toml
.github/workflows/: c-cpp-bindings.yml  csharp-bindings.yml  go-bindings.yml  java-bindings.yml  kotlin-bindings.yml  nodejs-bindings.yml  php-bindings.yml  python-bindings.yml  ruby-bindings.yml  scala-bindings.yml  swift-bindings.yml
c/: rust_asr.h  w2v_bert_uk.h
cpp/: rust_asr.hpp  w2v_bert_uk.hpp
csharp/: NativeMethods.g.cs
docker/colab-glibc/: Dockerfile
examples/: Transcribe.cs  Transcribe.java  Transcribe.kt  Transcribe.scala  transcribe.c  transcribe.cpp  transcribe.go  transcribe.js  transcribe.php  transcribe.py  transcribe.rb  transcribe.rs  transcribe.swift
go/: rust_asr.go  rust_asr_test.go  w2v_bert_uk.go  w2v_bert_uk_test.go
java/io/github/rustedbytes/rustasr/: RustAsr.java
java/io/github/rustedbytes/w2vbertuk/: W2vBertUk.java
php/: Cargo.toml  build.rs
php/src/: lib.rs
scala/io/github/rustedbytes/rustasr/: RustAsr.scala
scala/io/github/rustedbytes/w2vbertuk/: W2vBertUk.scala
scripts/: build-colab-glibc.sh  build-nodejs.js
src/: asr_autodiff_kernels.rs  audio.rs  csharp.rs  ctc.rs  cubecl_kernels.rs  java.rs  kotlin.rs  lib.rs  main.rs  model.rs  nodejs.rs  paraformer.rs  python.rs  ruby.rs  scala.rs  squeezeformer.rs  swift.rs  tokenizer.rs  train.rs  wav2vec.rs  zipformer.rs
src/squeezeformer/: transcribe.rs
