[package]
name = "w2v-bert-uk"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[lib]
name = "w2v_bert_uk"
crate-type = ["rlib", "cdylib"]

[features]
default = []
coreml = ["ort/coreml"]
cuda = ["ort/cuda"]
ort-dynamic = ["ort/load-dynamic"]
python = ["dep:pyo3", "pyo3/extension-module"]

[dependencies]
anyhow = "1.0"
asr-features = { version = "0.1.1", features = ["frontend"] }
clap = { version = "4.6.1", features = ["derive"] }
half = { version = "2.1", default-features = false }
kenlm-rs = { version = "0.1.0" }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["api-24", "copy-dylibs", "download-binaries", "half", "ndarray", "std", "tls-native"] }
prost = "0.14"
pyo3 = { version = "0.27.1", optional = true, features = ["abi3-py310"] }
rayon = "1.11"
splintr = "0.9.1"
symphonia = { version = "0.5", default-features = false, features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }

[build-dependencies]
pyo3-build-config = "0.27.1"
