[package]
name = "w2v-bert-uk"
version = "0.1.4"
edition = "2024"
license = "GPL-3.0-only"
description = "Rust and Python transcription pipeline for Ukrainian W2V-BERT ONNX CTC models"
repository = "https://github.com/RustedBytes/w2v-bert-uk"
readme = "README.md"
keywords = ["speech-recognition", "transcription", "ukrainian", "onnx", "ctc"]
categories = ["command-line-utilities", "multimedia::audio"]

[lib]
name = "w2v_bert_uk"
crate-type = ["rlib", "cdylib"]

[features]
default = ["ort-bundled"]
coreml = ["ort/coreml"]
cuda = ["ort/cuda", "ort/preload-dylibs"]
ort-bundled = ["ort/copy-dylibs", "ort/download-binaries", "ort/tls-rustls"]
ort-dynamic = ["ort/load-dynamic"]
python = ["dep:pyo3", "pyo3/extension-module"]

[dependencies]
anyhow = "1.0"
asr-features = { version = "0.1.1", features = ["frontend"] }
clap = { version = "4.6.1", features = ["derive"] }
half = { version = "2.1", default-features = false }
kenlm-rs = { version = "0.1.0" }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["api-24", "half", "ndarray", "std"] }
prost = "0.14"
pyo3 = { version = "0.27.1", optional = true, features = ["abi3-py310"] }
rayon = "1.11"
splintr = "0.9.1"
symphonia = { version = "0.5", default-features = false, features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }

[build-dependencies]
pyo3-build-config = "0.27.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
