[package]
name = "w2v-bert-uk"
version = "0.1.4"
edition = "2024"
license = "GPL-3.0-only"
description = "Rust and Python transcription pipeline for Ukrainian W2V-BERT ONNX CTC models"
repository = "https://github.com/RustedBytes/w2v-bert-uk"
readme = "README.md"
keywords = ["speech-recognition", "transcription", "ukrainian", "onnx", "ctc"]
categories = ["command-line-utilities", "multimedia::audio"]

[lib]
name = "w2v_bert_uk"
crate-type = ["rlib", "cdylib"]

[features]
default = ["ort-bundled"]
c = []
coreml = ["ort/coreml"]
cuda = ["ort/cuda", "ort/preload-dylibs"]
cpp = []
csharp = []
go = []
java = ["dep:jni"]
kotlin = ["dep:uniffi"]
nodejs = ["dep:napi", "dep:napi-derive", "napi/napi8"]
ort-bundled = ["ort/copy-dylibs", "ort/download-binaries", "ort/tls-rustls"]
ort-dynamic = ["ort/load-dynamic"]
python = ["dep:pyo3", "pyo3/extension-module"]
ruby = ["dep:magnus", "dep:rb-sys-build"]
scala = ["dep:jni"]
swift = ["dep:swift-bridge"]
burn-cuda-backend = ["dep:burn-cuda"]
burn-wgpu-backend = ["dep:burn-wgpu"]

[dependencies]
anyhow = "1.0"
asr-features = { version = "0.1.1", features = ["frontend"] }
burn = { package = "burn-core", version = "0.21.0-pre.3", default-features = false, features = ["std"] }
burn-autodiff = { version = "0.21.0-pre.3", default-features = false, features = ["std"] }
burn-cuda = { version = "0.21.0-pre.3", default-features = false, features = ["std"], optional = true }
burn-ndarray = { version = "0.21.0-pre.3", default-features = false, features = ["std"] }
burn-nn = { version = "0.21.0-pre.3", default-features = false, features = ["std"] }
burn-optim = { version = "0.21.0-pre.3", default-features = false, features = ["std"] }
burn-wgpu = { version = "0.21.0-pre.3", default-features = false, features = ["std"], optional = true }
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11"
half = { version = "2.1", default-features = false }
kenlm-rs = { version = "0.1.0" }
jni = { version = "0.22.4", optional = true }
log = "0.4"
magnus = { version = "0.8.2", optional = true }
napi = { version = "2.16.17", optional = true, default-features = false, features = ["napi4"] }
napi-derive = { version = "2.16.13", optional = true }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["api-24", "half", "ndarray", "std"] }
prost = "0.14"
pyo3 = { version = "0.27.1", optional = true, features = ["abi3-py310"] }
rayon = "1.11"
safetensors = "0.6"
serde_json = "1.0"
splintr = "0.9.1"
swift-bridge = { version = "0.1.59", optional = true }
symphonia = { version = "0.5", default-features = false, features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
uniffi = { version = "0.31.1", optional = true }

[build-dependencies]
cbindgen = "0.29.2"
csbindgen = "1.9.7"
napi-build = "2.2.4"
pyo3-build-config = "0.27.1"
rb-sys-build = { version = "0.9.126", optional = true }
swift-bridge-build = "0.1.59"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
