[package]
name = "rust-asr-php"
version = "0.1.4"
edition = "2024"
license = "GPL-3.0-only"
description = "PHP extension bindings for rust-asr"
repository = "https://github.com/RustedBytes/rust-asr"

[lib]
name = "rust_asr"
crate-type = ["cdylib"]

[features]
default = ["ort-dynamic"]
coreml = ["rust-asr/coreml"]
cuda = ["rust-asr/cuda"]
ort-bundled = ["rust-asr/ort-bundled"]
ort-dynamic = ["rust-asr/ort-dynamic"]

[dependencies]
ext-php-rs = { version = "=0.15.10", features = ["anyhow"] }
rust-asr = { path = "..", default-features = false }
